--- a/charts/chart.html
+++ b/charts/chart.html
@@ -1,4 +1,4 @@
-<div id='chart-container-{{$index + 1}}'>
+<div rc-chart kind="chart.kind" id='chart-container-{{$index + 1}}'>
 	<div class='thumb'>
 		<div class='frame'>
 			<span class="glyphicon centered-absl fade-in glyph-large glyphicon-question-sign"></span>
