made interface (rough)

--- a/index.html
+++ b/index.html
@@ -14,19 +14,11 @@
 <body id="body-{{colorScheme}}" ng-controller='MainCtrl'>
 	<container  >
 		<div class='container ng-cloak mainBody'>
-			<h2>Financial Calculator</h2>
+			<h2>Mortgage Calculator</h2>
 			<div class='row'>
 
 				<div class='col-md-5'>
 					<div data-ng-include="'interface/interface.html'"></div>
-				</div>
-
-				<div class='col-md-4'>
-					<div data-ng-include="'charts/charts.html'"></div>
-				</div>
-
-				<div class='col-md-3'>
-					<div data-ng-include="'settings/settings.html'"></div>	
 				</div>
 
 			</div>
