--- a/interface/interface.html
+++ b/interface/interface.html
@@ -1,4 +1,4 @@
-<table class='table table-bordered white-bg'>
+<!--<table class='table table-bordered white-bg'>
 	<tr ng-repeat="field in fields"  ng-class="{'success':field.selected}" ngIf="field.display != 'hide'">
 		<td class="col-lg-2" ng-click="handleRowClick(field.key)">	
 			{{field.name}}
@@ -10,6 +10,93 @@
 			{{field.primer}}
 			{{cp[field.key]}}
 			{{field.chaser}}
+		</td>
+	</tr>
+</table>-->
+
+
+<table class='table table-bordered white-bg'>
+	<tr>
+		<td>
+			Investment Value
+		</td>
+		<td>
+			0
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Down Payment
+		</td>
+		<td>
+			0
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Mortgage Value
+		</td>
+		<td>
+			0
+		</td>
+		<td>
+			% Down Pay
+		</td>
+		<td>
+			0%
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Regular Payment
+		</td>
+		<td>
+			0
+		</td>
+		<td>
+			Recurring
+		</td>
+		<td>
+			Monthly
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Interest Rate
+		</td>
+		<td>
+			0
+		</td>
+		<td>
+			Compounded
+		</td>
+		<td>
+			Montlhly
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Amortization
+		</td>
+		<td>
+			25
+		</td>
+		<td>
+			Years
+		</td>
+	</tr>
+	<tr>
+		<td>
+			Interest Paid
+		</td>
+		<td>
+			0
+		</td>
+		<td>
+			Interest : Principal
+		</td>
+		<td>
+			0:0
 		</td>
 	</tr>
 </table>
