--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="body-{{colorScheme}}" ng-controller='MainCtrl'>
 	<container  >
 		<div class='container ng-cloak mainBody'>
-			<h2>Mortgage Calculator</h2>
+			<h2>Mortgage Calculator <span class='glyphicon glyphicon-home'></span></h2>
 			<div class='row'>
 
 				<div class='col-md-5'>
