--- a/interface/interface.html
+++ b/interface/interface.html
@@ -114,4 +114,4 @@
 	</tr>
 </table>
 
-<h2>Your {{freq}} payment is {{payment | number}}</h2>
+<h2>Your {{freq}} payment is {{payment | currency}}</h2>
