--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body id="body-{{colorScheme}}" ng-controller='MainCtrl'>
 	<container  >
 		<div class='container ng-cloak mainBody'>
-			<h2>Mortgage Calculator <span class='glyphicon glyphicon-home'></span></h2>
+			<h2><span class='glyphicon glyphicon-home'></span></h2>
 			<div class='row'>
 
-				<div class='col-md-5'>
+				<div class='col-md-6'>
 					<div data-ng-include="'interface/interface.html'"></div>
 				</div>
 
