--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script src="common/lib/less/less-1.3.3.min.js"></script>	
 	<script data-main="main" src="common/lib/require/require.js"></script>	
+	<style>
+	  .red {
+	  	color: #ff0000;
+	  }
+	</style>
 	
 	<link rel="stylesheet" type="text/css" href="common/lib/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="common/lib/bootstrap/slider/css/slider.css"
