added iproved functionality while fixing bug... the azureda way

--- a/interface/interface.html
+++ b/interface/interface.html
@@ -49,6 +49,15 @@
 		<td>
 			<h3>{{mortgageValue | number:0}}</h3>
 		</td>
+		<td>
+			<select ng-model='cp.compound'  class='form-control'>
+				<option>Annually</option>
+				<option>Bi-Annually</option>
+				<option>Monthly</option>
+				<option>Bi-Monthly</option>
+				<option>Bi-Weekly</option>
+			</select>
+		</td>
 
 	</tr>
 	<tr>
