--- a/index.html
+++ b/index.html
@@ -13,17 +13,43 @@
 	</style>
 	
 	<link rel="stylesheet" type="text/css" href="common/lib/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="common/styles/mortgage.css">
 	<link rel="stylesheet" type="text/css" href="common/lib/bootstrap/slider/css/slider.css"
 	
 </head>
 <body id="body-{{colorScheme}}" ng-controller='MainCtrl'>
 	<container  >
 		<div class='container ng-cloak mainBody'>
-			<h2><span class='glyphicon glyphicon-home'></span></h2>
+			<h2><span class='glyphicon glyphicon-home'></span>
+				<button 
+					type='button' 
+					ng-click='mode = "basic"'
+					class='btn btn-default'
+					ng-class="{true:'active', false:''}[mode == 'basic']">
+					Basic
+				</button>
+				<button 
+					type='button' 
+					ng-click='mode = "advanced"'
+					class='btn btn-default'
+					ng-class="{true:'active', false:''}[mode == 'advanced']">
+					Advanced
+				</button>
+				<button 
+					type='button' 
+					ng-click='mode = "expert"'
+					class='btn btn-default'
+					ng-class="{true:'active', false:''}[mode == 'expert']">
+					Expert
+				</button>
+
+
+			</h2>
 			<div class='row'>
 
-				<div class='col-md-6'>
+				<div class='col-md-8'>
 					<div data-ng-include="'interface/interface.html'"></div>
+
 				</div>
 
 			</div>
