--- a/interface/interface.html
+++ b/interface/interface.html
@@ -1,19 +1,3 @@
-<!--<table class='table table-bordered white-bg'>
-	<tr ng-repeat="field in fields"  ng-class="{'success':field.selected}" ngIf="field.display != 'hide'">
-		<td class="col-lg-2" ng-click="handleRowClick(field.key)">	
-			{{field.name}}
-		</td>
-		<td class="col-lg-2">
-			<input type='number' step={{field.step}} min=0 ng-disabled="field.selected" class='form-control' ng-model='cp[field.key]'/>			
-		</td>
-		<td class="col-lg-2">
-			{{field.primer}}
-			{{cp[field.key]}}
-			{{field.chaser}}
-		</td>
-	</tr>
-</table>-->
-
 <div id='wrapper' class='{{mode}}'>
 <table class='table table-bordered white-bg'>
 	<tr>
@@ -48,7 +32,7 @@
 			<h3>{{mortgageValue | number:0}}</h3>
 		</td>
 		
-		<td class='advanced'>
+<!--		<td class='advanced'>
 			<select ng-model='cp.payoff'  class='form-control'>
 				<option>Pay Off Sooner</option>
 				<option>Pay Full Term</option>
@@ -56,7 +40,7 @@
 		</td>
 		<td class='advanced'>
 			{{timeout}} / {{months}}
-		</td>
+		</td>-->
 
 	</tr>
 	<tr>
@@ -158,7 +142,7 @@
 	</tr>
 </table>
 
-<h3 class='expert'>Your monthly debt service is {{monthlyService | currency}}</h3>
+<h3 class='advanced'>Your monthly debt service is {{monthlyService | currency}}</h3>
 
 <table class='table table-bordered white-bg expert'>
 	<tr>
@@ -171,4 +155,34 @@
 	</tr>
 </table>
 <h3 class='expert' ng:class="{red: net<0}">Your net cashflow is {{net | currency}}</h3>
+
+<analytics class='expert'>
+	<h3>Breakdown</h3>
+	<table class='table'>
+		<thead>
+			<tr>
+				<th>
+					Month
+				</th>
+				<th>
+					Principal Paid
+				</th>
+				<th>
+					Equity
+				</th>
+			</tr>
+		</thead>
+		<tr ng-repeat="month in analytics.monthly">
+			<td>
+				{{month.month}}
+			</td>
+			<td>
+				{{month.principalPaid | currency}}
+			</td>
+			<td>
+				{{month.realizedEquity | currency}}
+			</td>
+		</tr>
+	</table>
+</analytics>
 </div>
